--- a/assets/editor-overlay.css
+++ b/assets/editor-overlay.css
@@ -1,6 +1,9 @@
-.extension-overlay {
+.editor-overlay {
   z-index: 10000;
   width: 100vw;
   min-height: 100vh;
   background: white;
+  /* position: fixed; */
+  top: 0;
+  left: 0;
 }
