--- a/assets/editor-overlay.css
+++ b/assets/editor-overlay.css
@@ -1,9 +1,7 @@
-.editor-overlay {
-  z-index: 10000;
-  width: 100vw;
-  min-height: 100vh;
-  background: white;
-  /* position: fixed; */
+.main-container {
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100vw;
+  min-height: 100vh;
 }
